# mlxmolkit

./: .gitignore  README.md  bench_floor.py  bench_lbfgs.py  main.py  package-plan.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/: bench_dg_bfgs_tg.py  bench_dg_energy.py  bench_e2e_mmff.py  bench_metal_kernel.py  bench_mmff.py  bench_pipeline.py
debug/: mmff_outlier_debug.py
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: forcefields.rst  index.rst  metal_kernels.rst  minimizer.rst  pipeline.rst  preprocessing.rst  public.rst  types.rst
mlxmolkit/: __init__.py  embed_molecules.py  mmff_optimize.py  types.py
mlxmolkit/benchmarks/: bench_phase6.py
mlxmolkit/forcefields/: dist_geom.py  dist_geom_3d.py  kernel_utils.py  mmff.py
mlxmolkit/metal_kernels/: dg_bfgs.metal  dg_bfgs.py  dg_bfgs_tg.metal  dg_lbfgs.metal  dg_lbfgs.py  etk_bfgs.metal  etk_bfgs.py  etk_lbfgs.metal  etk_lbfgs.py  mmff_bfgs.py  mmff_bfgs_header.metal  mmff_bfgs_source.metal  mmff_bfgs_source_tg.metal  stereo_checks.metal  stereo_checks.py
mlxmolkit/minimizer/: bfgs.py  bfgs_vectorized.py
mlxmolkit/pipeline/: context.py  driver.py  stage_coordgen.py  stage_distgeom_minimize.py  stage_etk_minimize.py  stage_stereochem_checks.py
mlxmolkit/preprocessing/: batching.py  etk_batching.py  mmff_batching.py  mmff_extract.py  rdkit_extract.py  torsion_prefs.py
tests/: conftest.py  test_bfgs.py  test_bfgs_vectorized.py  test_coordgen_boxsize.py  test_dist_geom_3d_energy.py  test_dist_geom_energy.py  test_embed_clear_confs.py  test_embed_molecules.py  test_kernel_utils.py  test_max_iterations.py  test_metal_dg_bfgs.py  test_metal_dg_bfgs_tg.py  test_metal_dg_lbfgs.py  test_metal_mmff_bfgs.py  test_mmff.py  test_pipeline.py  test_preprocessing.py  test_retry_scheduler.py  test_stereochem.py
