[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlxmolkit"
dynamic = ["version"]
description = "GPU-accelerated molecular 3D coordinate generation on Apple Silicon using MLX"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Shivam Patel", email = "shivam.1108@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Operating System :: MacOS :: MacOS X",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "mlx>=0.31.1",
    "numpy>=2.4.3",
    "rdkit>=2025.9.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
docs = [
    "sphinx>=8.0",
    "furo",
    "sphinx-autodoc-typehints",
]

[project.urls]
Homepage = "https://github.com/shivampatel10/mlxmolkit"
Repository = "https://github.com/shivampatel10/mlxmolkit"
Issues = "https://github.com/shivampatel10/mlxmolkit/issues"

[tool.hatch.version]
path = "mlxmolkit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["mlxmolkit"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
